--- a/.hintrc
+++ b/.hintrc
@@ -7,7 +7,16 @@
       "default",
       {
         "ignore": [
-          "-ms-text-size-adjust"
+          "-ms-text-size-adjust",
+          "aspect-ratio"
+        ]
+      }
+    ],
+    "compat-api/html": [
+      "default",
+      {
+        "ignore": [
+          "iframe[allow]"
         ]
       }
     ]
